# convergence-engine

./: Cargo.toml  README.md
src/: cognition.rs  execution.rs  intent.rs  lib.rs  main.rs
